--- a/style.css
+++ b/style.css
@@ -526,17 +526,24 @@ footer .right .links p{
 }
 
 @media screen and (max-width: 576px){
+   
     header .left h1{
         font-size: 30px;
     }
+
     .sell-nft .item{
         width: 100%;
     }
+
     .nft-shop .nft-list .item,
     .sellers .item{
-        width: 47%;
+        width: 45%;
     }
     .nft-shop .category{
-        font-size: 13px;
-    }   
+        font-size: 12px;
+    } 
+    
+    footer .links a{
+        font-size: 11px;
+    }
 }
