--- a/style.css
+++ b/style.css
@@ -531,8 +531,15 @@ footer .right .links p{
         font-size: 30px;
     }
 
+    .nft-shop .nft-list .item  .bid{
+        display: contents;
+    }
     .sell-nft .item{
         width: 100%;
+    }
+
+    .sellers{
+        margin: 10px 0 10px 10px;
     }
 
     .nft-shop .nft-list .item,
